crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-14.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/multiline-expression.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[template-injection]: code injection via template expansion
  --> @@INPUT@@:14:13
   |
12 |         - run: |
   |           --- this run block
13 |             echo ${{
14 | /             some.ctx
15 | |             && foo.bar
16 | |             || baz.qux
   | |______________________^ may expand into attacker-controllable code
   |
   = note: audit confidence → Unknown

info[template-injection]: code injection via template expansion
  --> @@INPUT@@:15:16
   |
12 |       - run: |
   |         --- this run block
...
15 |             && foo.bar
   |                ^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → Low

info[template-injection]: code injection via template expansion
  --> @@INPUT@@:16:16
   |
12 |       - run: |
   |         --- this run block
...
16 |             || baz.qux
   |                ^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → Low

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:22:15
   |
20 |           run: |
   |           --- this run block
21 |             echo "TSAN_OPTIONS=log_path=${GITHUB_WORKSPACE}/tsan_log suppressions=${GITHUB_WORKSPACE}/Tools/tsan/suppressions${{
22 | /               fromJSON(inputs.free-threading)
23 | |               && '_free_threading'
24 | |               || ''
   | |___________________^ may expand into attacker-controllable code
   |
   = note: audit confidence → Unknown

4 findings: 2 unknown, 2 informational, 0 low, 0 medium, 0 high
